...
                    NavigationRailDestination(
                      icon: Icon(Icons.timer),
                      label: Text('Timer'),
                    ),
                    NavigationRailDestination(
                      icon: Icon(Icons.subject),
                      label: Text('Subjects'),
                    ),
                    NavigationRailDestination(
                      icon: Icon(Icons.settings),
                      label: Text('Settings'),
                    ),
                  ],
...
